ISTO-134 Address SQ reported complexity in FHIR functionality by refactoring